--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,7 @@
 {
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#2E3005",
+        "titleBar.activeBackground": "#404308",
+        "titleBar.activeForeground": "#FBFCE2"
+    }
 }
