--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.6.0",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   }
